--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>67KHz</title>
+  <title>tp-franckg</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://rsms.me/">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 
 <body>
